--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">dice</string>
-    <string name="title_activity_main">dice</string>
-    <string name="package_name">io.ionic.dice</string>
-    <string name="custom_url_scheme">io.ionic.dice</string>
+    <string name="app_name">Two Dices</string>
+    <string name="title_activity_main">Two Dices</string>
+    <string name="package_name">io.ionic.twodices</string>
+    <string name="custom_url_scheme">io.ionic.twodices</string>
 </resources>
